--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@tanstack/react-query": "^5.35.5",
     "axios": "^1.6.8",
     "firebase": "^10.11.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.10",
     "react-datepicker": "^6.9.0",
