created download summary as pdf using html2pdf

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "axios": "^1.6.8",
     "firebase": "^10.11.1",
     "html2canvas": "^1.4.1",
+    "html2canvas-pro": "^1.4.3",
     "jspdf": "^2.5.1",
+    "jspdf-html2canvas": "^1.5.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "node-sass": "^9.0.0",
